# litcoder_core

./: .buildinfo  .flake8  .gitignore  KARTHIK.md  LICENSE  MANIFEST.in  README.md  api_reference.html  architecture.html  assemblies.html  assemblies_tutorial.html  caching.html  example.py  features.html  genindex.html  index.html  installation.html  models.html  objects.inv  overview.html  plotting.html  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  sandbox.py  search.html  searchindex.js  setup.py  train_simple.py  trainer.html  tutorial_embeddings.html  tutorial_language_models.html  tutorial_speech.html  tutorial_wordrate.html  unified.py
_autosummary/: encoding.assembly.assemblies.html  encoding.assembly.assembly_generator.html  encoding.assembly.assembly_loader.html  encoding.assembly.base_processor.html  encoding.assembly.html  encoding.assembly.lebel_processor.html  encoding.assembly.lpp_processor.html  encoding.assembly.narratives_processor.html  encoding.downsample.downsampling.html  encoding.downsample.html  encoding.features.FIR_expander.html  encoding.features.embeddings.html  encoding.features.factory.html  encoding.features.html  encoding.features.language_model.html  encoding.features.simple_features.html  encoding.features.speech_model.html  encoding.html  encoding.models.base.html  encoding.models.html  encoding.models.linear.html  encoding.models.nested_cv.html  encoding.models.ridge_regression.html  encoding.models.sklearn_model.html  encoding.plotting.html  encoding.plotting.plotting_utils.html  encoding.trainer.html  encoding.utils.html
_modules/: index.html
_sources/: assemblies.rst.txt  caching.rst.txt  index.rst.txt  installation.rst.txt  models.rst.txt  plotting.rst.txt  trainer.rst.txt
docs/: Makefile  api_reference.rst  architecture.rst  conf.py  features.rst  index.rst  overview.rst  quickstart.rst  requirements.txt
encoding/: trainer.py  utils.py
(+64 files in other folders)
