[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litcoder"
version = "0.0.1"
description = "A library for neural encoding and assembly processing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Taha Binhuraib, Ruimin Gao, Anya Ivanova"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.3.0",
    "pandas>=1.3.0",
    "h5py>=3.1.0",
    "nibabel>=3.2.0",
    "nilearn>=0.8.0",
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "datasets>=2.0.0",
    "huggingface-hub>=0.10.0",
    "einops>=0.4.0",
    "tqdm>=4.60.0",
    "tiktoken>=0.3.0",
    "wandb>=0.12.0",
    "plotly>=5.0.0",
    "seaborn>=0.11.0",
    "xarray>=0.20.0",
    "nltk>=3.6.0",
    "gensim>=4.0.0",
    "umap-learn>=0.5.0",
    "shap>=0.40.0",
    "sae-lens>=5.0.0",
    "transformer-lens>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/litcoder/litcoder"
Repository = "https://github.com/litcoder/litcoder"
Issues = "https://github.com/litcoder/litcoder/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["encoding*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]
